Tue Nov 23 14:56:59 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * adbc/SQLite/Exception.h:
        * adbc/SQLite/Exception.inl:
        * adbc/SQLite/Exception.cpp:

          Made some of the methods inline.

        * adbc/SQLite/Query.inl:
        * adbc/SQLite/Query.cpp:

          Bug fix where execute_no_record () was throwing the wrong
          exception type if the query failed.

Mon Nov  8 05:06:16 UTC 2010  James H. Hill  <james.hill@sprezzat.com>

        * adbc/ODBC/ODBC_Connection.cpp:

          Bug fix where the environment pointer used when creating
          the connection during the init () was incorrect.

        * adbc/ODBC/ODBC_Record.cpp:

          Bug fix where the record was not initialized to the first
          item in the collection.

Wed Sep 29 21:05:32 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * adbc/ODBC/ODBC_Parameter_List.h:
        * adbc/SQLite/Parameter_List.h:
        * adbc/SQLite/Record.cpp:

          Updated to HEAD of DOC middleware.

Thu May 20 14:57:25 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * adbc/SQLite/Query.cpp:

          Implemented the reset () method.

Mon Apr 19 13:50:33 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * MPC/config/adbc_odbc.mpb:
        * MPC/config/adbc_sqlite.mpb:

          Added adbclib as a base project.

        * adbc/SQLite/Query.h:
        * adbc/SQLite/Query.inl:
        * adbc/SQLite/Query.cpp:
        * adbc/SQLite/Record.h:
        * adbc/SQLite/Record.inl:
        * adbc/SQLite/Record.cpp:

          Fixed design issues related to circular dependencies.

Thu Feb 18 05:44:41 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * MPC/config/adbc_odbc.mpb:

          Missing base project file.

Mon Jan  4 16:51:31 UTC 2010  James H. Hill  <hillj at cs dot iupui dot edu>

        * .:

          Added default.features to the ingore list.
